# smart-clock

./: CMakeLists.txt  Doxyfile  README.md  requirements.md
UML/: lcd_display.xmi
documentatie/: README.md  errorHandling.md  libraries.md  prioriteitlijst.md  requirements.md  takenLijst.md  useCases.md
environment/: rpi.toolchain.cmake
html/: alarm_8py.html  annotated.html  buttons_8py.html  classalarm_1_1Alarm-members.html  classalarm_1_1Alarm.html  classbuttons_1_1Buttons-members.html  classbuttons_1_1Buttons.html  classes.html  classmain__test_1_1TestMenu-members.html  classmain__test_1_1TestMenu.html  classmain__test_1_1TestMenu__inherit__graph.dot  classmain__test_1_1TestRemoveToDo-members.html  classmain__test_1_1TestRemoveToDo.html  classmain__test_1_1TestRemoveToDo__inherit__graph.dot  classmenu_1_1Menu-members.html  classmenu_1_1Menu.html  classst7565_1_1Glcd-members.html  classst7565_1_1Glcd.html  classst7565_1_1Glcd__inherit__graph.dot  classxglcd__font_1_1XglcdFont-members.html  classxglcd__font_1_1XglcdFont.html  classxglcd__font_1_1XglcdFont__coll__graph.dot  clock_8py.html  dir_c8fa76d8dc1b9e06ff8aeb3121608b1b.html  files.html  functions.html  functions_func.html  functions_vars.html  global__variable_8py.html  global__variable__test_8py.html  graph_legend.html  hardware__init_8py.html  hierarchy.html  i2cDisplay_8py.html  index.html  inherit_graph_0.dot  inherit_graph_1.dot  inherit_graph_2.dot  inherit_graph_3.dot  inherit_graph_4.dot  (+35 more)
latex/: alarm_8py.tex  annotated.tex  buttons_8py.tex  classalarm_1_1Alarm.tex  classbuttons_1_1Buttons.tex  (+38 more)
(+940 files in other folders)
